add example of kernel linear regression in notebook with cleared output

--- a/zac_experiments.ipynb
+++ b/zac_experiments.ipynb
@@ -10,19 +10,23 @@
    },
    "outputs": [],
    "source": [
-    "from tools.kernels import kernel, kernel_matrix"
+    "import numpy as np\n",
+    "\n",
+    "from tools.kernels import kernel_matrix\n",
+    "from tools.optimization import find_f"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "x = [0, 1 ,2]\n",
-    "y = [1, 2, 1]"
+    "X = np.array([[1, 2,5], [1,2, 4], [-5, -4, -3], [-5, -7, 0]])"
    ]
   },
   {
@@ -33,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "kernel(x, y, type=\"bla\")"
+    "K = kernel_matrix(X)"
    ]
   },
   {
@@ -44,18 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X = np.vstack((x, y))"
+    "Y = [1, 1, 0, 0]"
    ]
   },
   {
@@ -66,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "X"
+    "alpha = find_f(K, Y, lamb=0.1)"
    ]
   },
   {
@@ -77,17 +70,8 @@
    },
    "outputs": [],
    "source": [
-    "kernel_matrix(X)"
+    "alpha"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
