updated 'Zack experiment notebook'

--- a/zac_experiments.ipynb
+++ b/zac_experiments.ipynb
@@ -17,7 +17,7 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from tools.corner_response_function import compute_gaussian_grad,compute_corner_response\n",
+    "from tools.corner_response_function import convolve, compute_corner_response, difference_of_Gaussian_filters\n",
     "from tools.visualization import reshape_as_images, imshow\n",
     "from tools.data_loading import load_images\n",
     "from tools.discretization import discretize_orientation, pin_as_vect\n",
@@ -54,8 +54,11 @@
     "stride = 3\n",
     "patch_size = 5\n",
     "\n",
+    "filterx, filtery = difference_of_Gaussian_filters()\n",
+    "\n",
     "R_size = (images.shape[1] - window_size - filter_size)//stride + 1\n",
-    "R = np.zeros((images.shape[0], R_size, R_size))"
+    "R = np.zeros((images.shape[0], R_size, R_size))\n",
+    "grads = list()"
    ]
   },
   {
@@ -71,8 +74,8 @@
     "for image_idx in range(images.shape[0]):\n",
     "        image_mat = images[image_idx]\n",
     "        im_size = image_mat.shape[0]  # normally 32\n",
-    "        image_grad_x, image_grad_y = compute_gaussian_grad(image_mat)\n",
-    "\n",
+    "        image_grad_x, image_grad_y = convolve(image_mat, filterx, filtery)\n",
+    "        grads.append((image_grad_x, image_grad_y))\n",
     "        for i in range(R_size):\n",
     "            for j in range(R_size):\n",
     "                I_x = image_grad_x[i*stride:i*stride+window_size,\n",
@@ -205,7 +208,7 @@
     "    i_s, j_s = np.where(\n",
     "        R[image_idx] > np.percentile(R[image_idx], 75))\n",
     "    i_s, j_s = from_R_to_im(i_s, j_s, window_size, stride)\n",
-    "    image_grad_x, image_grad_y = compute_gaussian_grad(image_mat) # added with Pierre ????\n",
+    "    image_grad_x, image_grad_y = grads[image_idx]\n",
     "    for i, j in zip(i_s, j_s):  # i, j are the coordinates in R of POI\n",
     "        patch_x = image_grad_x[i-patch_size//2:i+patch_size//2+1,\n",
     "                               j-patch_size//2:j+patch_size//2+1]\n",
