added GMM + rbf implementations

--- a/submission_pipeline.ipynb
+++ b/submission_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
     "from tools.optimization import find_f\n",
     "from tools.prediction import pred\n",
     "from tools.process_images import process_images\n",
-    "from tools.quantization import kmeans\n",
+    "from tools.quantization import kmeans, em_full\n",
     "from tools.submission import labels_to_csv\n",
     "from tools.visualization import imshow, dump_as_png"
    ]
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -52,9 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -71,293 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrongly clusterized pins: 120017\n",
-      "Wrongly clusterized pins: 44483\n",
-      "Wrongly clusterized pins: 22165\n",
-      "Wrongly clusterized pins: 14826\n",
-      "Wrongly clusterized pins: 11155\n",
-      "Wrongly clusterized pins: 9014\n",
-      "Wrongly clusterized pins: 7503\n",
-      "Wrongly clusterized pins: 6629\n",
-      "Wrongly clusterized pins: 5992\n",
-      "Wrongly clusterized pins: 5288\n",
-      "Wrongly clusterized pins: 4924\n",
-      "Wrongly clusterized pins: 4498\n",
-      "Wrongly clusterized pins: 4200\n",
-      "Wrongly clusterized pins: 3921\n",
-      "Wrongly clusterized pins: 3585\n",
-      "Wrongly clusterized pins: 3345\n",
-      "Wrongly clusterized pins: 3130\n",
-      "Wrongly clusterized pins: 3060\n",
-      "Wrongly clusterized pins: 2885\n",
-      "Wrongly clusterized pins: 2677\n",
-      "Wrongly clusterized pins: 2575\n",
-      "Wrongly clusterized pins: 2535\n",
-      "Wrongly clusterized pins: 2364\n",
-      "Wrongly clusterized pins: 2155\n",
-      "Wrongly clusterized pins: 2007\n",
-      "Wrongly clusterized pins: 1891\n",
-      "Wrongly clusterized pins: 1822\n",
-      "Wrongly clusterized pins: 1709\n",
-      "Wrongly clusterized pins: 1650\n",
-      "Wrongly clusterized pins: 1622\n",
-      "Wrongly clusterized pins: 1537\n",
-      "Wrongly clusterized pins: 1478\n",
-      "Wrongly clusterized pins: 1447\n",
-      "Wrongly clusterized pins: 1357\n",
-      "Wrongly clusterized pins: 1392\n",
-      "Wrongly clusterized pins: 1400\n",
-      "Wrongly clusterized pins: 1374\n",
-      "Wrongly clusterized pins: 1302\n",
-      "Wrongly clusterized pins: 1212\n",
-      "Wrongly clusterized pins: 1195\n",
-      "Wrongly clusterized pins: 1198\n",
-      "Wrongly clusterized pins: 1186\n",
-      "Wrongly clusterized pins: 1151\n",
-      "Wrongly clusterized pins: 1141\n",
-      "Wrongly clusterized pins: 1059\n",
-      "Wrongly clusterized pins: 982\n",
-      "Wrongly clusterized pins: 877\n",
-      "Wrongly clusterized pins: 856\n",
-      "Wrongly clusterized pins: 849\n",
-      "Wrongly clusterized pins: 831\n",
-      "Wrongly clusterized pins: 809\n",
-      "Wrongly clusterized pins: 657\n",
-      "Wrongly clusterized pins: 584\n",
-      "Wrongly clusterized pins: 582\n",
-      "Wrongly clusterized pins: 615\n",
-      "Wrongly clusterized pins: 609\n",
-      "Wrongly clusterized pins: 587\n",
-      "Wrongly clusterized pins: 571\n",
-      "Wrongly clusterized pins: 589\n",
-      "Wrongly clusterized pins: 546\n",
-      "Wrongly clusterized pins: 526\n",
-      "Wrongly clusterized pins: 514\n",
-      "Wrongly clusterized pins: 504\n",
-      "Wrongly clusterized pins: 489\n",
-      "Wrongly clusterized pins: 474\n",
-      "Wrongly clusterized pins: 464\n",
-      "Wrongly clusterized pins: 470\n",
-      "Wrongly clusterized pins: 489\n",
-      "Wrongly clusterized pins: 453\n",
-      "Wrongly clusterized pins: 474\n",
-      "Wrongly clusterized pins: 477\n",
-      "Wrongly clusterized pins: 480\n",
-      "Wrongly clusterized pins: 448\n",
-      "Wrongly clusterized pins: 462\n",
-      "Wrongly clusterized pins: 432\n",
-      "Wrongly clusterized pins: 400\n",
-      "Wrongly clusterized pins: 394\n",
-      "Wrongly clusterized pins: 418\n",
-      "Wrongly clusterized pins: 394\n",
-      "Wrongly clusterized pins: 361\n",
-      "Wrongly clusterized pins: 329\n",
-      "Wrongly clusterized pins: 320\n",
-      "Wrongly clusterized pins: 311\n",
-      "Wrongly clusterized pins: 290\n",
-      "Wrongly clusterized pins: 285\n",
-      "Wrongly clusterized pins: 275\n",
-      "Wrongly clusterized pins: 244\n",
-      "Wrongly clusterized pins: 237\n",
-      "Wrongly clusterized pins: 228\n",
-      "Wrongly clusterized pins: 186\n",
-      "Wrongly clusterized pins: 168\n",
-      "Wrongly clusterized pins: 169\n",
-      "Wrongly clusterized pins: 187\n",
-      "Wrongly clusterized pins: 174\n",
-      "Wrongly clusterized pins: 159\n",
-      "Wrongly clusterized pins: 159\n",
-      "Wrongly clusterized pins: 170\n",
-      "Wrongly clusterized pins: 189\n",
-      "Wrongly clusterized pins: 205\n",
-      "Wrongly clusterized pins: 183\n",
-      "Wrongly clusterized pins: 195\n",
-      "Wrongly clusterized pins: 173\n",
-      "Wrongly clusterized pins: 185\n",
-      "Wrongly clusterized pins: 182\n",
-      "Wrongly clusterized pins: 212\n",
-      "Wrongly clusterized pins: 203\n",
-      "Wrongly clusterized pins: 223\n",
-      "Wrongly clusterized pins: 217\n",
-      "Wrongly clusterized pins: 197\n",
-      "Wrongly clusterized pins: 183\n",
-      "Wrongly clusterized pins: 180\n",
-      "Wrongly clusterized pins: 166\n",
-      "Wrongly clusterized pins: 173\n",
-      "Wrongly clusterized pins: 163\n",
-      "Wrongly clusterized pins: 180\n",
-      "Wrongly clusterized pins: 199\n",
-      "Wrongly clusterized pins: 197\n",
-      "Wrongly clusterized pins: 194\n",
-      "Wrongly clusterized pins: 182\n",
-      "Wrongly clusterized pins: 190\n",
-      "Wrongly clusterized pins: 211\n",
-      "Wrongly clusterized pins: 195\n",
-      "Wrongly clusterized pins: 194\n",
-      "Wrongly clusterized pins: 213\n",
-      "Wrongly clusterized pins: 189\n",
-      "Wrongly clusterized pins: 168\n",
-      "Wrongly clusterized pins: 160\n",
-      "Wrongly clusterized pins: 149\n",
-      "Wrongly clusterized pins: 157\n",
-      "Wrongly clusterized pins: 160\n",
-      "Wrongly clusterized pins: 163\n",
-      "Wrongly clusterized pins: 149\n",
-      "Wrongly clusterized pins: 153\n",
-      "Wrongly clusterized pins: 142\n",
-      "Wrongly clusterized pins: 132\n",
-      "Wrongly clusterized pins: 129\n",
-      "Wrongly clusterized pins: 144\n",
-      "Wrongly clusterized pins: 132\n",
-      "Wrongly clusterized pins: 111\n",
-      "Wrongly clusterized pins: 107\n",
-      "Wrongly clusterized pins: 114\n",
-      "Wrongly clusterized pins: 115\n",
-      "Wrongly clusterized pins: 118\n",
-      "Wrongly clusterized pins: 99\n",
-      "Wrongly clusterized pins: 72\n",
-      "Wrongly clusterized pins: 79\n",
-      "Wrongly clusterized pins: 70\n",
-      "Wrongly clusterized pins: 88\n",
-      "Wrongly clusterized pins: 79\n",
-      "Wrongly clusterized pins: 78\n",
-      "Wrongly clusterized pins: 74\n",
-      "Wrongly clusterized pins: 87\n",
-      "Wrongly clusterized pins: 79\n",
-      "Wrongly clusterized pins: 69\n",
-      "Wrongly clusterized pins: 59\n",
-      "Wrongly clusterized pins: 61\n",
-      "Wrongly clusterized pins: 59\n",
-      "Wrongly clusterized pins: 62\n",
-      "Wrongly clusterized pins: 48\n",
-      "Wrongly clusterized pins: 45\n",
-      "Wrongly clusterized pins: 41\n",
-      "Wrongly clusterized pins: 33\n",
-      "Wrongly clusterized pins: 27\n",
-      "Wrongly clusterized pins: 32\n",
-      "Wrongly clusterized pins: 37\n",
-      "Wrongly clusterized pins: 40\n",
-      "Wrongly clusterized pins: 47\n",
-      "Wrongly clusterized pins: 40\n",
-      "Wrongly clusterized pins: 31\n",
-      "Wrongly clusterized pins: 27\n",
-      "Wrongly clusterized pins: 28\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 31\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 22\n",
-      "Wrongly clusterized pins: 17\n",
-      "Wrongly clusterized pins: 17\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 18\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 38\n",
-      "Wrongly clusterized pins: 29\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 19\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 19\n",
-      "Wrongly clusterized pins: 21\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 15\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 32\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 31\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 28\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 29\n",
-      "Wrongly clusterized pins: 27\n",
-      "Wrongly clusterized pins: 40\n",
-      "Wrongly clusterized pins: 33\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 18\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 17\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 18\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 21\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 22\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 28\n",
-      "Wrongly clusterized pins: 38\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 15\n",
-      "Wrongly clusterized pins: 16\n",
-      "Wrongly clusterized pins: 13\n",
-      "Wrongly clusterized pins: 13\n",
-      "Wrongly clusterized pins: 9\n",
-      "Wrongly clusterized pins: 14\n",
-      "Wrongly clusterized pins: 17\n",
-      "Wrongly clusterized pins: 15\n",
-      "Wrongly clusterized pins: 13\n",
-      "Wrongly clusterized pins: 19\n",
-      "Wrongly clusterized pins: 21\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 28\n",
-      "Wrongly clusterized pins: 29\n",
-      "Wrongly clusterized pins: 21\n",
-      "Wrongly clusterized pins: 24\n",
-      "Wrongly clusterized pins: 21\n",
-      "Wrongly clusterized pins: 12\n",
-      "Wrongly clusterized pins: 11\n",
-      "Wrongly clusterized pins: 13\n",
-      "Wrongly clusterized pins: 11\n",
-      "Wrongly clusterized pins: 8\n",
-      "Wrongly clusterized pins: 8\n",
-      "Wrongly clusterized pins: 4\n",
-      "Wrongly clusterized pins: 6\n",
-      "Wrongly clusterized pins: 3\n",
-      "Wrongly clusterized pins: 4\n",
-      "Wrongly clusterized pins: 2\n",
-      "Wrongly clusterized pins: 2\n",
-      "Wrongly clusterized pins: 2\n",
-      "Wrongly clusterized pins: 2\n",
-      "Wrongly clusterized pins: 1\n",
-      "Wrongly clusterized pins: 4\n",
-      "Wrongly clusterized pins: 2\n",
-      "Wrongly clusterized pins: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pins_dict_train = pins_generation(training_idx=training_idx, ratio_pins_per_image=33)\n",
     "pins_train = pins_dict_train[\"pins\"]\n",
     "train_pins = pins_dict_train[\"train_pins\"]\n",
     "pin_to_im_train = pins_dict_train[\"pin_to_im\"]\n",
     "pins_mat = np.vstack(train_pins)\n",
-    "visual_features = kmeans(pins_mat, 100)"
+    "pi, mu, sigma, labels = em_full(pins_mat, 100)"
    ]
   },
   {
@@ -375,7 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train = process_images(n_train, visual_features, pins_train, pin_to_im_train)\n",
+    "X_train = process_images(n_train, (pi, mu, sigma), pins_train, pin_to_im_train, gaussian_mixture=True)\n",
     "n_train, n_var = X_train.shape"
    ]
   },
@@ -557,8 +282,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
