--- a/zac_experiments.ipynb
+++ b/zac_experiments.ipynb
@@ -629,7 +629,7 @@
     }
    ],
    "source": [
-    "visual_features = kmeans(pins_mat, 70)"
+    "visual_features, _ = kmeans(pins_mat, 70)"
    ]
   },
   {
@@ -1070,8 +1070,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
