--- a/submission_pipeline-Pierre.ipynb
+++ b/submission_pipeline-Pierre.ipynb
@@ -11,6 +11,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sklearn as \n",
     "\n",
     "from tools.data_loading import load_images, load_labels, dummy_code\n",
     "from tools.feature_learning import pins_generation\n",
@@ -105,7 +106,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -8706,7 +8709,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -8850,7 +8855,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
