final version of LR

--- a/submission_pipeline-Pierre.ipynb
+++ b/submission_pipeline-Pierre.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -315,7 +315,7 @@
     "alpha = np.zeros((n_classes, n_sample))\n",
     "for dig in range(n_classes):\n",
     "    alpha[dig, :] = find_f(K_sample, Y_sample[:, dig],\n",
-    "                           prob_type=classifier_type, lamb=70, n_iter=10)"
+    "                           prob_type=classifier_type, lamb=70, n_iter=100)"
    ]
   },
   {
@@ -330,15 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision on the train set is of 0.246\n"
+     ]
+    }
+   ],
    "source": [
-    "Y_pred_test = np.zeros((X_sample.shape[0][:500], n_classes))\n",
+    "Y_pred_test = np.zeros((X_sample[:500].shape[0], n_classes))\n",
     "for dig in range(n_classes):\n",
     "    Y_pred_test[:, dig] = pred(X_sample, X_sample[:500], alpha[dig, :],\n",
     "                          kernel_type=kernel_type)\n",
@@ -351,14 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision on the test set is of 0.182\n"
+     ]
+    }
+   ],
    "source": [
     "Y_pred = np.zeros((X_test.shape[0], n_classes))\n",
     "for dig in range(n_classes):\n",
@@ -383,9 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
